--- a/Colormaps_Matplotlib.ipynb
+++ b/Colormaps_Matplotlib.ipynb
@@ -220,10 +220,10 @@
     "    unique_colors = set(tuple(rgba) for rgba in rgba_colors) # remove duplicate colors\n",
     "    colormap_info[col_map] = len(unique_colors) # number of unique color\n",
     "\n",
-    "i = 0"
+    "i = 0",
     "for col_map, num_colors in colormap_info.items():\n",
     "    if i == 8: break",
-    "    print(f\"Colormap: {col_map}, Number of Shades: {num_colors}\")# colormaps with ~512 colors have that many shades available"
+    "    print(f\"Colormap: {col_map}, Number of Shades: {num_colors}\")# colormaps with ~512 colors have that many shades available",
     "    i += 1"
    ]
   },
