--- a/Colormaps_Matplotlib.ipynb
+++ b/Colormaps_Matplotlib.ipynb
@@ -48,165 +48,7 @@
       "Colormap: BrBG, Number of Shades: 512\n",
       "Colormap: BrBG_r, Number of Shades: 512\n",
       "Colormap: BuGn, Number of Shades: 512\n",
-      "Colormap: BuGn_r, Number of Shades: 512\n",
-      "Colormap: BuPu, Number of Shades: 512\n",
-      "Colormap: BuPu_r, Number of Shades: 512\n",
-      "Colormap: CMRmap, Number of Shades: 512\n",
-      "Colormap: CMRmap_r, Number of Shades: 512\n",
-      "Colormap: Dark2, Number of Shades: 8\n",
-      "Colormap: Dark2_r, Number of Shades: 8\n",
-      "Colormap: GnBu, Number of Shades: 512\n",
-      "Colormap: GnBu_r, Number of Shades: 512\n",
-      "Colormap: Greens, Number of Shades: 512\n",
-      "Colormap: Greens_r, Number of Shades: 512\n",
-      "Colormap: Greys, Number of Shades: 512\n",
-      "Colormap: Greys_r, Number of Shades: 512\n",
-      "Colormap: OrRd, Number of Shades: 512\n",
-      "Colormap: OrRd_r, Number of Shades: 512\n",
-      "Colormap: Oranges, Number of Shades: 512\n",
-      "Colormap: Oranges_r, Number of Shades: 512\n",
-      "Colormap: PRGn, Number of Shades: 512\n",
-      "Colormap: PRGn_r, Number of Shades: 512\n",
-      "Colormap: Paired, Number of Shades: 12\n",
-      "Colormap: Paired_r, Number of Shades: 12\n",
-      "Colormap: Pastel1, Number of Shades: 9\n",
-      "Colormap: Pastel1_r, Number of Shades: 9\n",
-      "Colormap: Pastel2, Number of Shades: 8\n",
-      "Colormap: Pastel2_r, Number of Shades: 8\n",
-      "Colormap: PiYG, Number of Shades: 512\n",
-      "Colormap: PiYG_r, Number of Shades: 512\n",
-      "Colormap: PuBu, Number of Shades: 512\n",
-      "Colormap: PuBuGn, Number of Shades: 512\n",
-      "Colormap: PuBuGn_r, Number of Shades: 512\n",
-      "Colormap: PuBu_r, Number of Shades: 512\n",
-      "Colormap: PuOr, Number of Shades: 512\n",
-      "Colormap: PuOr_r, Number of Shades: 512\n",
-      "Colormap: PuRd, Number of Shades: 512\n",
-      "Colormap: PuRd_r, Number of Shades: 512\n",
-      "Colormap: Purples, Number of Shades: 512\n",
-      "Colormap: Purples_r, Number of Shades: 512\n",
-      "Colormap: RdBu, Number of Shades: 512\n",
-      "Colormap: RdBu_r, Number of Shades: 512\n",
-      "Colormap: RdGy, Number of Shades: 512\n",
-      "Colormap: RdGy_r, Number of Shades: 512\n",
-      "Colormap: RdPu, Number of Shades: 512\n",
-      "Colormap: RdPu_r, Number of Shades: 512\n",
-      "Colormap: RdYlBu, Number of Shades: 512\n",
-      "Colormap: RdYlBu_r, Number of Shades: 512\n",
-      "Colormap: RdYlGn, Number of Shades: 512\n",
-      "Colormap: RdYlGn_r, Number of Shades: 512\n",
-      "Colormap: Reds, Number of Shades: 512\n",
-      "Colormap: Reds_r, Number of Shades: 512\n",
-      "Colormap: Set1, Number of Shades: 9\n",
-      "Colormap: Set1_r, Number of Shades: 9\n",
-      "Colormap: Set2, Number of Shades: 8\n",
-      "Colormap: Set2_r, Number of Shades: 8\n",
-      "Colormap: Set3, Number of Shades: 12\n",
-      "Colormap: Set3_r, Number of Shades: 12\n",
-      "Colormap: Spectral, Number of Shades: 512\n",
-      "Colormap: Spectral_r, Number of Shades: 512\n",
-      "Colormap: Wistia, Number of Shades: 512\n",
-      "Colormap: Wistia_r, Number of Shades: 512\n",
-      "Colormap: YlGn, Number of Shades: 512\n",
-      "Colormap: YlGnBu, Number of Shades: 512\n",
-      "Colormap: YlGnBu_r, Number of Shades: 512\n",
-      "Colormap: YlGn_r, Number of Shades: 512\n",
-      "Colormap: YlOrBr, Number of Shades: 512\n",
-      "Colormap: YlOrBr_r, Number of Shades: 512\n",
-      "Colormap: YlOrRd, Number of Shades: 512\n",
-      "Colormap: YlOrRd_r, Number of Shades: 512\n",
-      "Colormap: afmhot, Number of Shades: 512\n",
-      "Colormap: afmhot_r, Number of Shades: 512\n",
-      "Colormap: autumn, Number of Shades: 512\n",
-      "Colormap: autumn_r, Number of Shades: 512\n",
-      "Colormap: binary, Number of Shades: 512\n",
-      "Colormap: binary_r, Number of Shades: 512\n",
-      "Colormap: bone, Number of Shades: 512\n",
-      "Colormap: bone_r, Number of Shades: 512\n",
-      "Colormap: brg, Number of Shades: 512\n",
-      "Colormap: brg_r, Number of Shades: 512\n",
-      "Colormap: bwr, Number of Shades: 512\n",
-      "Colormap: bwr_r, Number of Shades: 512\n",
-      "Colormap: cividis, Number of Shades: 256\n",
-      "Colormap: cividis_r, Number of Shades: 256\n",
-      "Colormap: cool, Number of Shades: 512\n",
-      "Colormap: cool_r, Number of Shades: 512\n",
-      "Colormap: coolwarm, Number of Shades: 512\n",
-      "Colormap: coolwarm_r, Number of Shades: 512\n",
-      "Colormap: copper, Number of Shades: 512\n",
-      "Colormap: copper_r, Number of Shades: 512\n",
-      "Colormap: cubehelix, Number of Shades: 512\n",
-      "Colormap: cubehelix_r, Number of Shades: 512\n",
-      "Colormap: flag, Number of Shades: 495\n",
-      "Colormap: flag_r, Number of Shades: 493\n",
-      "Colormap: gist_earth, Number of Shades: 512\n",
-      "Colormap: gist_earth_r, Number of Shades: 512\n",
-      "Colormap: gist_gray, Number of Shades: 512\n",
-      "Colormap: gist_gray_r, Number of Shades: 512\n",
-      "Colormap: gist_heat, Number of Shades: 512\n",
-      "Colormap: gist_heat_r, Number of Shades: 512\n",
-      "Colormap: gist_ncar, Number of Shades: 512\n",
-      "Colormap: gist_ncar_r, Number of Shades: 512\n",
-      "Colormap: gist_rainbow, Number of Shades: 512\n",
-      "Colormap: gist_rainbow_r, Number of Shades: 512\n",
-      "Colormap: gist_stern, Number of Shades: 512\n",
-      "Colormap: gist_stern_r, Number of Shades: 512\n",
-      "Colormap: gist_yarg, Number of Shades: 512\n",
-      "Colormap: gist_yarg_r, Number of Shades: 512\n",
-      "Colormap: gnuplot, Number of Shades: 512\n",
-      "Colormap: gnuplot2, Number of Shades: 512\n",
-      "Colormap: gnuplot2_r, Number of Shades: 512\n",
-      "Colormap: gnuplot_r, Number of Shades: 512\n",
-      "Colormap: gray, Number of Shades: 512\n",
-      "Colormap: gray_r, Number of Shades: 512\n",
-      "Colormap: hot, Number of Shades: 512\n",
-      "Colormap: hot_r, Number of Shades: 512\n",
-      "Colormap: hsv, Number of Shades: 512\n",
-      "Colormap: hsv_r, Number of Shades: 512\n",
-      "Colormap: inferno, Number of Shades: 256\n",
-      "Colormap: inferno_r, Number of Shades: 256\n",
-      "Colormap: jet, Number of Shades: 506\n",
-      "Colormap: jet_r, Number of Shades: 506\n",
-      "Colormap: magma, Number of Shades: 256\n",
-      "Colormap: magma_r, Number of Shades: 256\n",
-      "Colormap: nipy_spectral, Number of Shades: 512\n",
-      "Colormap: nipy_spectral_r, Number of Shades: 512\n",
-      "Colormap: ocean, Number of Shades: 512\n",
-      "Colormap: ocean_r, Number of Shades: 512\n",
-      "Colormap: pink, Number of Shades: 512\n",
-      "Colormap: pink_r, Number of Shades: 512\n",
-      "Colormap: plasma, Number of Shades: 256\n",
-      "Colormap: plasma_r, Number of Shades: 256\n",
-      "Colormap: prism, Number of Shades: 484\n",
-      "Colormap: prism_r, Number of Shades: 484\n",
-      "Colormap: rainbow, Number of Shades: 512\n",
-      "Colormap: rainbow_r, Number of Shades: 512\n",
-      "Colormap: seismic, Number of Shades: 512\n",
-      "Colormap: seismic_r, Number of Shades: 512\n",
-      "Colormap: spring, Number of Shades: 512\n",
-      "Colormap: spring_r, Number of Shades: 512\n",
-      "Colormap: summer, Number of Shades: 512\n",
-      "Colormap: summer_r, Number of Shades: 512\n",
-      "Colormap: tab10, Number of Shades: 10\n",
-      "Colormap: tab10_r, Number of Shades: 10\n",
-      "Colormap: tab20, Number of Shades: 20\n",
-      "Colormap: tab20_r, Number of Shades: 20\n",
-      "Colormap: tab20b, Number of Shades: 20\n",
-      "Colormap: tab20b_r, Number of Shades: 20\n",
-      "Colormap: tab20c, Number of Shades: 20\n",
-      "Colormap: tab20c_r, Number of Shades: 20\n",
-      "Colormap: terrain, Number of Shades: 512\n",
-      "Colormap: terrain_r, Number of Shades: 512\n",
-      "Colormap: turbo, Number of Shades: 256\n",
-      "Colormap: turbo_r, Number of Shades: 256\n",
-      "Colormap: twilight, Number of Shades: 510\n",
-      "Colormap: twilight_r, Number of Shades: 510\n",
-      "Colormap: twilight_shifted, Number of Shades: 510\n",
-      "Colormap: twilight_shifted_r, Number of Shades: 510\n",
-      "Colormap: viridis, Number of Shades: 256\n",
-      "Colormap: viridis_r, Number of Shades: 256\n",
-      "Colormap: winter, Number of Shades: 512\n",
-      "Colormap: winter_r, Number of Shades: 512\n"
+      "Colormap: BuGn_r, Number of Shades: 512\n"
      ]
     }
    ],
@@ -220,10 +62,10 @@
     "    unique_colors = set(tuple(rgba) for rgba in rgba_colors) # remove duplicate colors\n",
     "    colormap_info[col_map] = len(unique_colors) # number of unique color\n",
     "\n",
-    "i = 0",
+    "i = 0\n",
     "for col_map, num_colors in colormap_info.items():\n",
-    "    if i == 8: break",
-    "    print(f\"Colormap: {col_map}, Number of Shades: {num_colors}\")# colormaps with ~512 colors have that many shades available",
+    "    if i == 8: break\n",
+    "    print(f\"Colormap: {col_map}, Number of Shades: {num_colors}\")# colormaps with ~512 colors have that many shades available\n",
     "    i += 1"
    ]
   },
