--- a/Colormaps_Matplotlib.ipynb
+++ b/Colormaps_Matplotlib.ipynb
@@ -64,7 +64,8 @@
     "\n",
     "i = 0\n",
     "for col_map, num_colors in colormap_info.items():\n",
-    "    if i == 8: break\n",
+    "    if i == 8:\n",
+    "        break\n",
     "    print(f\"Colormap: {col_map}, Number of Shades: {num_colors}\")# colormaps with ~512 colors have that many shades available\n",
     "    i += 1"
    ]
